<resources>
    <string name="app_name">Movie_Booking_Application</string>
    <string name="available_shows">Available Shows</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="_1">1</string>
    <string name="ticket">Ticket</string>
    <string name="_9_12_am">9 - 12 am</string>
    <string name="_6_9_pm">6 - 9 pm</string>
    <string name="_3_6_pm">3 - 6 pm</string>
    <string name="_12_3_pm">12 - 3 pm</string>
    <string name="show_timings">Show Timings</string>
    <string name="next">Next</string>
    <string name="setup">Setup</string>
    <string name="termText">By tapping Sign in or Create account, you
 agree to our Term of Service. Learn how we process your data in our Privacy Policy and Cookies Policy</string>
    <string name="user_name">User Name</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="pleas_wait_n_you_ll_receive_otp_code_shortly">Pleas wait..\n you\'ll receive OTP Code shortly</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_need_your_number_in_order_to_send_you_ticket_confirmation_message_nwe_will_send_you_an_otp_code_nplease_don_t_share_your_otp_code_with_anyone">We need your number in order to send you ticket confirmation message.\nWe will send you an OTP Code\nPlease don\'t share your OTP Code with anyone.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>